pxc/tests/test_167_methodlike_fixme/t2.px
namespace t2;
public import core::common -;
public import foo -;

{
  foo f;
  println(f.m2()); // error: foo_m2 is private
}

